fixed small bug where sysroot would be pointing to wrong path

--- a/apps/user_vdma_app/Makefile
+++ b/apps/user_vdma_app/Makefile
@@ -1,9 +1,12 @@
 TARGET = vdma_control
-CC = arm-linux-gnueabihf-gcc
+# commented out CC because it was using wrong sysroot correc is:--sysroot=/home/--path-to-sdk-sysroot--/sysroots/cortexa9t2hf-neon-xilinx-linux-gnueabi
+# because of this it could not find SDL2
+#CC = arm-linux-gnueabihf-gcc
 CFLAGS = -g -Wall -std=c17
 HEADERS_INCLUDE = -Iinclude
 CFLAGS += $(HEADERS_INCLUDE)
-LIBS = -lm 
+LDFLAGS = -L/home/Oliwier/Workspace/vdma_sdk/sysroots/cortexa9t2hf-neon-xilinx-linux-gnueabi/usr/lib
+LIBS = -lm -lSDL2  
 
 .PHONY: default all clean
 
@@ -25,7 +28,7 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c $(HEADERS)
 .PRECIOUS: $(TARGET) $(OBJECTS)
 
 $(TARGET): $(OBJECTS)
-	$(CC) $(OBJECTS) -Wall $(LIBS) -o $@
+	$(CC) $(OBJECTS) $(LDFLAGS) -Wall $(LIBS) -o $@
 
 clean:
 	-rm -f $(OBJ_DIR)/*.o
