implemented a simple thread safe logger, working on server handling

--- a/rtos/apps/EOS/Makefile
+++ b/rtos/apps/EOS/Makefile
@@ -12,6 +12,7 @@ init:
 				 platform active $(plat_name); \
 				 domain active $(domain_name); \
 				 bsp setlib -name lwip220; \
+				 bsp setlib -name xilffs; \
 				 bsp config api_mode SOCKET_API; \
 				 bsp write; \
 				 platform generate; \
