unoptimized addition of ugui square which bounces of the screen edges
- using 3 framebuffers with the current strategy will not work. will
need further investigation
- currently using 1 framebuffer and reading/writing from it->bad but
functionality is more important right now

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ rtos/apps/EOS/workspace/IDE.log
 rtos/apps/EOS/workspace/RemoteSystemsTempFiles
 rtos/apps/EOS/dbg_init_A9_0.tcl
 rtos/apps/EOS/workspace/FlappyBird_InC/Debug
+rtos/apps/EOS/workspace/FlappyBird_InC/Debug
+rtos/apps/EOS/workspace/FlappyBird_InC/Debug
